#now has the ability to directly read csv data

--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,72 @@
     "#allows for spectrographs and other audio manipulation\n",
     "import pandas as pd\n",
     "from pydub import AudioSegment\n",
-    "#allows for audio file slicing"
+    "#allows for audio file slicing\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aj2 = pd.read_csv(r\"C:\\Users\\njfur\\Desktop\\Capstone Project\\A. jubatus\\AJ2.csv\")\n",
+    "aj3 = pd.read_csv(r\"C:\\Users\\njfur\\Desktop\\Capstone Project\\A. jubatus\\AJ3.csv\")\n",
+    "aj5 = pd.read_csv(r\"C:\\Users\\njfur\\Desktop\\Capstone Project\\A. jubatus\\AJ5.csv\")\n",
+    "aj13 = pd.read_csv(r\"C:\\Users\\njfur\\Desktop\\Capstone Project\\A. jubatus\\AJ13.csv\")\n",
+    "aj2_sound, aj2_rate = librosa.load(r\"C:\\Users\\njfur\\Desktop\\Capstone Project\\A. jubatus\\Acinonyx_jubatus_S0612_02.wav\")\n",
+    "aj3_sound, aj3_rate = librosa.load(r\"C:\\Users\\njfur\\Desktop\\Capstone Project\\A. jubatus\\Acinonyx_jubatus_S1121_03.wav\")\n",
+    "aj5_sound, aj5_rate = librosa.load(r\"C:\\Users\\njfur\\Desktop\\Capstone Project\\A. jubatus\\Acinonyx_jubatus_S1121_05.wav\")\n",
+    "aj13_sound, aj13_rate = librosa.load(r\"C:\\Users\\njfur\\Desktop\\Capstone Project\\A. jubatus\\Acinonyx_jubatus_S1366_13.wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AJ2 = (aj2, aj2_sound)\n",
+    "AJ3 = (aj3, aj3_sound)\n",
+    "AJ5 = (aj5, aj5_sound)\n",
+    "AJ13 = (aj13, aj13_sound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def time_sec(time):\n",
+    "    (m, s) = time.split(':')\n",
+    "    return int(m) * 60 + int(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_sec('0:09')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +96,330 @@
     "        data.append([amplitude_range, average_amp, duration, zeros, species, sex, age, lst_calls[x]])\n",
     "    output = pd.DataFrame(data, columns = ['Amp_range','Avg_amp','Duration','Zero_Crossings', 'Species', 'Sex', 'Age', 'Call'])\n",
     "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def audio_feat_extractor(tup):\n",
+    "    csv = tup[0]\n",
+    "    audio = tup[1]\n",
+    "    data = []\n",
+    "    for x, y in csv.iterrows():\n",
+    "        print(y[0], y[1], y[2], y[3], y[4], y[5], y[6], y[7])\n",
+    "        start = math.floor(time_sec(y[3]))\n",
+    "        end = math.ceil(time_sec(y[4]))\n",
+    "        temp = audio[start * 22050 : end *22050]\n",
+    "        zeros = sum(librosa.zero_crossings(temp))\n",
+    "        duration = end - start\n",
+    "        amplitude_range = max(temp)-min(temp)\n",
+    "        average_amp = np.mean(temp)\n",
+    "        data.append([amplitude_range, average_amp, duration, zeros, y[0], y[1], y[2], y[5]])\n",
+    "    output = pd.DataFrame(data, columns = ['Amp_range','Avg_amp','Duration','Zero_Crossings', 'Species', 'Sex', 'Age', 'Call'])\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A. jubatus nan A 0:00 0:01 growl 0 nan\n",
+      "A. jubatus nan A 0:01 0:05 nan 0 nan\n",
+      "A. jubatus nan A 0:06 0:11 growl 0 nan\n",
+      "A. jubatus nan A 0:11 0:16 nan 0 nan\n",
+      "A. jubatus nan A 0:16 0:19 growl 0 nan\n",
+      "A. jubatus nan A 0:24 0:35 growl? 0 nan\n",
+      "A. jubatus nan A 0:49 1:03 growl? 1 nan\n",
+      "A. jubatus nan A 1:06 1:08 growl 0 nan\n",
+      "A. jubatus nan A 1:10 1:11 nan 0 nan\n",
+      "A. jubatus nan A 1:13 1:18 growl 0 nan\n",
+      "A. jubatus nan A 1:22 1:27 growl 0 nan\n",
+      "A. jubatus nan A 1:28 1:30 nan 0 nan\n",
+      "A. jubatus nan A 1:45 1:49 nan 0 nan\n",
+      "A. jubatus nan A 1:49 2:02 growl? 0 might have some other types of calls mixed in\n",
+      "A. jubatus nan A 2:07 2:14 growl 0 nan\n",
+      "A. jubatus nan A 2:16 2:21 growl 0 nan\n",
+      "A. jubatus nan A 2:28 2:30 growl 0 nan\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Amp_range</th>\n",
+       "      <th>Avg_amp</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Zero_Crossings</th>\n",
+       "      <th>Species</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Call</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.166116</td>\n",
+       "      <td>-3.188780e-05</td>\n",
+       "      <td>1</td>\n",
+       "      <td>706</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>growl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.466826</td>\n",
+       "      <td>-7.877250e-06</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3456</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.311871</td>\n",
+       "      <td>5.425827e-06</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2984</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>growl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.386908</td>\n",
+       "      <td>2.965167e-06</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3108</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.327264</td>\n",
+       "      <td>-2.166283e-05</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1919</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>growl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.282358</td>\n",
+       "      <td>-7.209107e-06</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4722</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>growl?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.376489</td>\n",
+       "      <td>-4.322251e-06</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5581</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>growl?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.275109</td>\n",
+       "      <td>-1.521657e-05</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1269</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>growl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.115904</td>\n",
+       "      <td>-8.681753e-05</td>\n",
+       "      <td>1</td>\n",
+       "      <td>595</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.165053</td>\n",
+       "      <td>-5.399594e-06</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2342</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>growl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.147779</td>\n",
+       "      <td>-1.277652e-05</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1880</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>growl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.339260</td>\n",
+       "      <td>2.011788e-05</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1239</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.564086</td>\n",
+       "      <td>-9.388634e-07</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3686</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.370885</td>\n",
+       "      <td>-3.714060e-06</td>\n",
+       "      <td>13</td>\n",
+       "      <td>9331</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>growl?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0.850423</td>\n",
+       "      <td>5.233508e-07</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4701</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>growl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0.268877</td>\n",
+       "      <td>1.031894e-05</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3214</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>growl</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0.093121</td>\n",
+       "      <td>-3.969479e-05</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1028</td>\n",
+       "      <td>A. jubatus</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>A</td>\n",
+       "      <td>growl</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Amp_range       Avg_amp  Duration  Zero_Crossings     Species  Sex Age  \\\n",
+       "0    0.166116 -3.188780e-05         1             706  A. jubatus  NaN   A   \n",
+       "1    0.466826 -7.877250e-06         4            3456  A. jubatus  NaN   A   \n",
+       "2    0.311871  5.425827e-06         5            2984  A. jubatus  NaN   A   \n",
+       "3    0.386908  2.965167e-06         5            3108  A. jubatus  NaN   A   \n",
+       "4    0.327264 -2.166283e-05         3            1919  A. jubatus  NaN   A   \n",
+       "5    0.282358 -7.209107e-06        11            4722  A. jubatus  NaN   A   \n",
+       "6    0.376489 -4.322251e-06        14            5581  A. jubatus  NaN   A   \n",
+       "7    0.275109 -1.521657e-05         2            1269  A. jubatus  NaN   A   \n",
+       "8    0.115904 -8.681753e-05         1             595  A. jubatus  NaN   A   \n",
+       "9    0.165053 -5.399594e-06         5            2342  A. jubatus  NaN   A   \n",
+       "10   0.147779 -1.277652e-05         5            1880  A. jubatus  NaN   A   \n",
+       "11   0.339260  2.011788e-05         2            1239  A. jubatus  NaN   A   \n",
+       "12   0.564086 -9.388634e-07         4            3686  A. jubatus  NaN   A   \n",
+       "13   0.370885 -3.714060e-06        13            9331  A. jubatus  NaN   A   \n",
+       "14   0.850423  5.233508e-07         7            4701  A. jubatus  NaN   A   \n",
+       "15   0.268877  1.031894e-05         5            3214  A. jubatus  NaN   A   \n",
+       "16   0.093121 -3.969479e-05         2            1028  A. jubatus  NaN   A   \n",
+       "\n",
+       "      Call  \n",
+       "0    growl  \n",
+       "1      NaN  \n",
+       "2    growl  \n",
+       "3      NaN  \n",
+       "4    growl  \n",
+       "5   growl?  \n",
+       "6   growl?  \n",
+       "7    growl  \n",
+       "8      NaN  \n",
+       "9    growl  \n",
+       "10   growl  \n",
+       "11     NaN  \n",
+       "12     NaN  \n",
+       "13  growl?  \n",
+       "14   growl  \n",
+       "15   growl  \n",
+       "16   growl  "
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "audio_feat_extractor(AJ2)"
    ]
   },
   {
