changed amplitude calculation

--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -240,8 +240,9 @@
     "            temp = audio[start * 22050 : end *22050]\n",
     "            zeros = sum(librosa.zero_crossings(temp))\n",
     "            duration = end - start\n",
-    "            amplitude_range = max(temp)-min(temp)\n",
-    "            average_amp = np.mean(temp)\n",
+    "            positive = np.absolute(temp)\n",
+    "            amplitude_range = max(positive)-min(positive)\n",
+    "            average_amp = np.mean(positive)\n",
     "            range_freq = frequency_range(temp)\n",
     "            data.append([amplitude_range, average_amp, range_freq, duration, zeros, y[0], y[1], y[2],y[5]])\n",
     "    output = pd.DataFrame(data, columns = ['Amp_range','Avg_amp','Duration','Zero_Crossings', 'Freq_range','Species', 'Sex', 'Age','Call'])\n",
