--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -223,6 +223,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pulses(file):\n",
+    "    count = 0\n",
+    "    for i in range(len(file)):\n",
+    "        if i != 0 or i != (len(file)-1):\n",
+    "            if file[i]>file[i-1] and file[i]>file[i+1]:\n",
+    "                count += 1\n",
+    "    #pulse per second\n",
+    "    pulse = count/(len(file)/22050)\n",
+    "    return pulse"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
