fixed an issue with the pulses per second feature

--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,15 +223,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def top_freq(file):\n",
+    "    f, t, mag = librosa.reassigned_spectrogram(file)\n",
+    "    freqs = [0]*len(f[0])\n",
+    "    for y in range(len(f[0])):\n",
+    "        for x in range(len(f)):\n",
+    "            if mag[x][y] > 0.18:\n",
+    "                freqs[y] = f[x][y]\n",
+    "    return freqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pulses(file):\n",
     "    count = 0\n",
-    "    for i in range(len(file)):\n",
-    "        if i != 0 or i != (len(file)-1):\n",
-    "            if file[i]>file[i-1] and file[i]>file[i+1]:\n",
+    "    frequencies = top_freq(file)\n",
+    "    for i in range(len(frequencies)):\n",
+    "        if i != 0 and i <= (len(frequencies)-2):\n",
+    "            if frequencies[i]>frequencies[i-1] and frequencies[i]>frequencies[i+1]:\n",
     "                count += 1\n",
     "    #pulse per second\n",
     "    pulse = count/(len(file)/22050)\n",
@@ -240,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,23 +278,35 @@
     "            amplitude_range = max(positive)-min(positive)\n",
     "            average_amp = np.mean(positive)\n",
     "            range_freq = frequency_range(temp)\n",
-    "            data.append([amplitude_range, average_amp, range_freq, duration, zeros, y[0], y[1], y[2],y[5]])\n",
-    "    output = pd.DataFrame(data, columns = ['Amp_range','Avg_amp','Duration','Zero_Crossings', 'Freq_range','Species', 'Sex', 'Age','Call'])\n",
+    "            pulse = pulses(temp)\n",
+    "            data.append([amplitude_range, average_amp, range_freq, pulse, duration, zeros, y[0], y[1], y[2],y[5]])\n",
+    "    output = pd.DataFrame(data, columns = ['Amp_range','Avg_amp', 'Freq_range','Pulses_per_Sec','Duration','Zero_Crossings','Species', 'Sex', 'Age','Call'])\n",
     "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\njfur\\anaconda3\\lib\\site-packages\\librosa\\core\\spectrum.py:608: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  correction = -np.imag(S_dh / S_h)\n",
+      "C:\\Users\\njfur\\anaconda3\\lib\\site-packages\\librosa\\core\\spectrum.py:780: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  correction = np.real(S_th / S_h)\n"
+     ]
+    }
+   ],
    "source": [
     "features_dataframe = audio_feat_extractor(audio_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
