Changed cutoff value to take DB values in top_freq

--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -229,10 +229,11 @@
    "source": [
     "def top_freq(file):\n",
     "    f, t, mag = librosa.reassigned_spectrogram(file)\n",
+    "    mag_db = librosa.power_to_db(mag)\n",
     "    freqs = [0]*len(f[0])\n",
     "    for y in range(len(f[0])):\n",
     "        for x in range(len(f)):\n",
-    "            if mag[x][y] > 0.18:\n",
+    "            if mag_db[x][y] > -10:\n",
     "                freqs[y] = f[x][y]\n",
     "    return freqs"
    ]
