--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -258,6 +258,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def partials(file):\n",
+    "    count = 0\n",
+    "    mags, freqs, line = plt.magnitude_spectrum(new, 22050)\n",
+    "    for i in range(len(mags)):\n",
+    "        if i > 100 and i <= (len(mags)-102):\n",
+    "            previous = [mags[i-x] for x in range(1,100)]\n",
+    "            post = [mags[i+x] for x in range(1,100)]\n",
+    "            if mags[i] > max(previous) and mags[i] > max(post) and mags[i] > 0.0005:\n",
+    "                count += 1\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [],
