--- a/Feature Cleaning and First Models.ipynb
+++ b/Feature Cleaning and First Models.ipynb
@@ -362,15 +362,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame.to_csv('cleaned.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
@@ -404,7 +395,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train.to_csv('cleand.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
