added MFCC, update pulse

--- a/Feature Extraction.ipynb
+++ b/Feature Extraction.ipynb
@@ -45,16 +45,25 @@
     "aj3_sound, aj3_rate = librosa.load(r\".\\Capstone Files\\A. jubatus\\Acinonyx_jubatus_S1121_03.wav\")\n",
     "aj5_sound, aj5_rate = librosa.load(r\".\\Capstone Files\\A. jubatus\\Acinonyx_jubatus_S1121_05.wav\")\n",
     "aj13_sound, aj13_rate = librosa.load(r\".\\Capstone Files\\A. jubatus\\Acinonyx_jubatus_S1366_13.wav\")\n",
-    "#Acinonyx files\n",
-    "AJ2 = (aj2, aj2_sound)\n",
-    "AJ3 = (aj3, aj3_sound)\n",
-    "AJ5 = (aj5, aj5_sound)\n",
-    "AJ13 = (aj13, aj13_sound)"
+    "#Acinonyx files"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AJ2 = (aj2, aj2_sound)\n",
+    "AJ3 = (aj3, aj3_sound)\n",
+    "AJ5 = (aj5, aj5_sound)\n",
+    "AJ13 = (aj13, aj13_sound)\n",
+    "#Acinonyx files continued"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,8 +194,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CT1 = pd.read_csv(r\".\\Capstone Files\\Catopuma temminckii\\Catopuma temminckii sounds.csv\")\n",
+    "CT1_sound, CT1_rate = librosa.load(r\".\\Capstone Files\\Catopuma temminckii\\Catopuma_temminckii_V1736_02.wav\")\n",
+    "CT1T = (CT1, CT1_sound)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "def pulses1(file):\n",
+    "def pulses(file):\n",
     "    count = 0\n",
     "    frequencies = top_freq(file)\n",
     "    for i in range(len(frequencies)):\n",
@@ -248,15 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pulses(file):\n",
-    "    y = file\n",
     "\n",
     "    #Find max\n",
-    "    peaks = find_peaks(y, height = 0, prominence = 0.01)\n",
+    "    peaks = find_peaks(file, height = 0, prominence = 0.01)\n",
     "    max_height = peaks[1]['peak_heights'] #array of the heights of  peaks\n",
     "    pulse = len(peaks[0])/(len(file)/22050)\n",
     "    return pulse"
@@ -264,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,15 +298,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "def extract_mfcc(file):\n",
     "    \n",
-    "    mfcc = np.mean(librosa.feature.mfcc(y=file, sr=22050, n_mfcc=13).T,axis=0)\n",
-    "    \n",
+    "    mfcc_withbrackets = np.mean(librosa.feature.mfcc(y=file, sr=22050, n_mfcc=13)\n",
+    "    mfcc = mfcc_withbrackets[1:-1]\n",
+    "    ''''mfcc = librosa.feature.mfcc(LP1_sound, sr=22050, n_mfcc=13)\n",
+    "    #delta and delta2 mfccs\n",
+    "    delta_mfcc = librosa.feature.delta(mfcc)\n",
+    "    delta2_mfcc = librosa.feature.delta(mfcc, order=2)\n",
+    "    mfccs = np.concatenate(mfcc, delta_mfcc, delta2_mfcc)\n",
+    "    mfccs = np.array(mfccs)\n",
+    "    '''\n",
     "    return mfcc"
    ]
   },
@@ -318,9 +340,10 @@
     "            range_freq = frequency_range(temp)\n",
     "            pulse = pulses(temp)\n",
     "            partial = partials(temp)\n",
-    "            mfcc = extract_mfcc(temp)\n",
-    "            data.append([amplitude_range, average_amp, range_freq, pulse, partial, mfcc, duration, zeros, y[0], y[1], y[2],y[5]])\n",
-    "    output = pd.DataFrame(data, columns = ['Amp_range','Avg_amp', 'Freq_range','Pulses_per_Sec','Partials', 'MFCC', 'Duration','Zero_Crossings','Species', 'Sex', 'Age','Call'])\n",
+    "            mfcc = np.mean(librosa.feature.mfcc(y=audio, sr=22050, n_mfcc=13))\n",
+    "            \n",
+    "            data.append([amplitude_range, average_amp, range_freq, pulse, partial, mfcc, duration, zeros, y[1], y[2], y[0], y[5]])\n",
+    "    output = pd.DataFrame(data, columns = ['Amp_range','Avg_amp', 'Freq_range','Pulses_per_Sec','Partials', 'MFCC', 'Duration', 'Zero_Crossings', 'Sex', 'Age', 'Species', 'Call'])\n",
     "    return output"
    ]
   },
@@ -354,13 +377,6 @@
    "source": [
     "features_dataframe.to_csv('features.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
